--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ email:
 
 # If publishing to a subdirectory as in http://site.com/project set 'root: /project'
 root: /
-permalink: /blog/:year/:month/:day/:title/
+permalink: /blog/:year-/:month/:day/:title/
 source: source
 destination: public
 plugins: plugins
@@ -90,7 +90,7 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name: inlinechan
+disqus_short_name: withsourcecode
 disqus_show_comment_count: false
 
 # Google Analytics
