Removing http:// in url

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://inlinechan.github.io
+url: inlinechan.github.io
 title: With Source Code
 subtitle: Source code, Howto and others..
 author: Hyungchan
